telegram_user_id/telegram_bot_id fields (#147)
