# cmd/eskimo/api/swagger.json
@@ -764,6 +764,14 @@
                     "type": "integer",
                     "example": 100
                 },
+                "telegramBotId": {
+                    "type": "string",
+                    "example": "5678"
+                },
+                "telegramUserId": {
+                    "type": "string",
+                    "example": "1234"
+                },
                 "updatedAt": {
                     "type": "string",
                     "example": "2022-01-03T16:20:52.156534Z"
@@ -1113,6 +1121,14 @@
                 "t2ReferralCount": {
                     "type": "integer",
                     "example": 100
+                },
+                "telegramBotId": {
+                    "type": "string",
+                    "example": "5678"
+                },
+                "telegramUserId": {
+                    "type": "string",
+                    "example": "1234"
                 },
                 "updatedAt": {
                     "type": "string",
